[package]
name = "poly2geojson"
description = "Convert from Osmosis POLY to GeoJSON"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.1"
pest_derive = "^2.1"
geojson = "*"
